--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <link rel="stylesheet" href="src/mobile-style.css" />
   <link rel="shortcut icon" href="/assets/logo BLK.png" type="image/x-icon" />
   <link rel="icon" href="/assets/logo BLK.png" type="image/x-icon" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-17KN74FRTY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-17KN74FRTY');
+  </script>
 </head>
 
 <body>
