penambahan rounded pada gambar

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="row">
           <div class="col-md-6 col-12">
             <div class="pray">
-              <img src="assets/angkatan 1.jpg" alt="my-pic" />
+              <img src="assets/angkatan 1.jpg" class="rounded" alt="my-pic" />
             </div>
           </div>
           <div class="col-md-6 col-12">
