penambahan status pada web ke server

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
               <a class="nav-link" href="#main-project">Galeri</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://stats.uptimerobot.com/nVGZNfXp6m">Status</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#main-contact">CONTACT</a>
             </li>
           </ul>
