--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#main-header">Beranda <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://baitulhikmahdepok.netlify.app/">Beranda <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#main-about">Tentang</a>
@@ -79,7 +79,7 @@
               <a class="nav-link" href="https://stats.uptimerobot.com/nVGZNfXp6m">Status</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#main-contact">CONTACT</a>
+              <a class="nav-link" href="#main-contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -187,7 +187,7 @@
       <div class="container-fluid text-center">
         <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
           <div class="rect">
-            <h1>1460</h1>
+            <h1>1480</h1>
             <p>Subscribers</p>
             <a href="https://www.youtube.com/channel/UCoV4xeyX6ESARscJc5VeFpQ/featured">
               <p><i class="fab fa-youtube"></i> Youtube</p>
@@ -201,7 +201,7 @@
             </a>
           </div>
           <div class="rect">
-            <h1>56</h1>
+            <h1>57</h1>
             <p>Followers</p>
             <a href="https://www.instagram.com/blkkbaitulhikmahdepok/?hl=en" target="_blank">
               <p><i class="fab fa-instagram"></i> Instagram</p>
