--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <br />
         </div>
         <div class="col-md-5 col-sm-12 main-img h-25">
-          <img src="assets/logo BLK.png" alt="mac" />
+          <img src="assets/logo BLK1.png" alt="mac" />
         </div>
       </div>
     </div>
