--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </div>
             <div class="card-body">
               <a href="https://www.instagram.com/p/CUPn6WWpBCR/?utm_source=ig_web_copy_link" target="_blank"
-                class="card-link">Instagram link</a>
+                class="card-link"><p><i class="fab fa-instagram"></i> blkbaitulhikmahdepok</p></a>
             </div>
           </div>
           <div class="card mr-2 d-inline-block shadow-lg" style="width: 18rem">
@@ -242,7 +242,7 @@
             </div>
             <div class="card-body">
               <a href="https://www.instagram.com/p/CUPn6WWpBCR/?utm_source=ig_web_copy_link" target="_blank"
-                class="card-link">Instagram link</a>
+                class="card-link"><p><i class="fab fa-instagram"></i> blkbaitulhikmahdepok</p></a>
             </div>
             <div class="card-body">
               <a href="#" class="card-link"></a>
@@ -254,8 +254,8 @@
               <p class="card-text"><small class="text-muted">Last updated 20 mins ago</small></p>
             </div>
             <div class="card-body">
-              <a href="https://www.instagram.com/p/CUPn6WWpBCR/?utm_source=ig_web_copy_link" class="card-link">Instagram
-                link</a>
+              <a href="https://www.instagram.com/p/CUPn6WWpBCR/?utm_source=ig_web_copy_link" class="card-link"><p><i class="fab fa-instagram"></i> blkbaitulhikmahdepok</p>
+                </a>
             </div>
           </div>
           <div class="card mr-2 d-inline-block shadow-lg"
@@ -266,8 +266,7 @@
               <p class="card-text"><small class="text-muted">Last update 30 mins ago</small></p>
             </div>
             <div class="card-body">
-              <a href="https://www.instagram.com/p/CUAgaJ8JQKi/?utm_source=ig_web_copy_link" class="card-link">Instagram
-                link</a>
+              <a href="https://www.instagram.com/p/CUAgaJ8JQKi/?utm_source=ig_web_copy_link" class="card-link"><p><i class="fab fa-instagram"></i> blkbaitulhikmahdepok</p></a>
             </div>
           </div>
     </section>
