perubahan pada versi mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <header id="main-header">
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <i class="fas fa-circle-notch"></i> BLKK Baitul Hikmah Depok
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -67,7 +67,7 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="https://baitulhikmahdepok.netlify.app/">Beranda <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#main-about">Tentang</a>
